# coin-report

./: .gitignore  LICENSE  README.md  pyproject.toml  railway.toml
src/coin_report/: app.py  schemas.py
src/coin_report/html/: model.html
