[tool.poetry]
name = "coin-report"
version = "0.1.0"
description = ""
authors = ["Mateus Dias <mateusdias1409@gmail.com>"]

packages = [{ include = "coin_report", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = "^2.32.5"
taskipy = "^1.14.1"
resend = "^2.19.0"
python-dotenv = "^1.2.1"

[tool.taskipy.tasks]
run = "python src/coin_report/app.py"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
